fixed #490: align the buttons well

--- a/app/assets/stylesheets/app.sass
+++ b/app/assets/stylesheets/app.sass
@@ -452,6 +452,8 @@ header.topbar
     float: left
     height: 28px
     width: 35px
+    &.hide
+      display: none
   .grid_btn 
     border-radius: 2px 0 0 2px
     border-right: none
@@ -1507,7 +1509,7 @@ header.topbar
     text-align: center
 
   .edit_button
-    display: inline
+    display: inline-block
     &.edit
       display: none
 
